# icewatch

./: .gitignore  Cargo.toml  LICENSE  README.md  app_config.toml  release.toml  state.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
crates/icewatch/: Cargo.toml  build.rs
crates/icewatch-config/: Cargo.toml
crates/icewatch-config/src/: lib.rs
crates/icewatch-persistence/: Cargo.toml
crates/icewatch-persistence/src/: lib.rs
crates/icewatch-theme/: Cargo.toml
crates/icewatch-theme/src/: lib.rs  macros.rs
crates/icewatch-utils/: Cargo.toml
crates/icewatch-utils/src/: cli.rs  command.rs  io.rs  lib.rs  locale.rs  logging.rs
crates/icewatch/src/: journal.rs  macros.rs  main.rs  rules.rs
crates/icewatch/src/app/: message.rs  mod.rs  state.rs  tray.rs
crates/icewatch/src/app/features/: main.rs  mod.rs  rules.rs  settings.rs
crates/icewatch/src/app/features/main/: context_menu.rs  dashboard.rs  data.rs  explorer.rs  mod.rs  toolbar.rs  view.rs
crates/icewatch/src/app/features/main/elements/: common.rs  context_menu.rs  dashboard.rs  explorer.rs  journal.rs  mod.rs  rules.rs  toolbar.rs
crates/icewatch/src/app/features/main/main_message/: home_message.rs  journal_message.rs  mod.rs  rules_message.rs
crates/icewatch/src/app/features/main/message/: home.rs  mod.rs  rules.rs
crates/icewatch/src/app/features/main/messages/: home.rs  journal.rs  rules.rs
resources/locales/en-US/: main.toml  rules.toml  settings.toml  tray.toml
themes/: everforest.toml
