[package]
name = "icewatch-utils"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
anyhow.workspace = true
serde.workspace = true
sys-locale.workspace = true
toml.workspace = true
