
[package]
name = "icewatch"
version.workspace = true
authors.workspace = true
edition.workspace = true

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[dependencies]
icewatch-utils.path = "../icewatch-utils"
icewatch-theme.path = "../icewatch-theme"
icewatch-persistence.path = "../icewatch-persistence"
icewatch-config.path = "../icewatch-config"

tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
smol.workspace = true
tray-icon.workspace = true

gtk.workspace = true
iced.workspace = true
serde.workspace = true
chrono.workspace = true
rfd.workspace = true
dirs.workspace = true
indexmap.workspace = true
notify.workspace = true
